@@ -1,8 +1,8 @@
-/*
-    Copyright 1999-2017, Felspar Co Ltd. http://support.felspar.com/
+/**
+    Copyright 1999-2018, Felspar Co Ltd. <https://support.felspar.com/>
+
     Distributed under the Boost Software License, Version 1.0.
-    See accompanying file LICENSE_1_0.txt or copy at
-        http://www.boost.org/LICENSE_1_0.txt
+    See <http://www.boost.org/LICENSE_1_0.txt>
 */
 
 
@@ -94,8 +94,8 @@ namespace fostlib {
         accessors< nullable< string > > password;
         const filepath_string &pathspec() const;
         void pathspec( const filepath_string &pathName );
-        accessors< nullable< ascii_printable_string > > anchor;
         accessors< query_string, fostlib::lvalue > query;
+        accessors<nullable<ascii_printable_string>> fragment;
 
         static setting< string > s_default_host;
 
